--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=contact-manager
 
+server.port=8080
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/midb
 spring.datasource.username=miusuario
 spring.datasource.password=miclave
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
-
-server.port=8080
