--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=contact-manager
 
-server.port=8080
+# Puerto del servidor
+#server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/midb
-spring.datasource.username=miusuario
-spring.datasource.password=miclave
-spring.jpa.hibernate.ddl-auto=update
+# Database
+spring.datasource.url=postgresql://contactmanager_db_ai5e_user:A97PUqSXZlxAuTCmt5WUU9F52u750mJY@dpg-d2m8nb6r433s73crneu0-a/contactmanager_db_ai5e
+spring.datasource.username=contactmanager_db_ai5e_user
+spring.datasource.password=A97PUqSXZlxAuTCmt5WUU9F52u750mJY
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Config
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
