Add server port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=contact-manager
 
 # Puerto del servidor
-#server.port=8080
+server.port=8080
 
 # Database
 spring.datasource.url=postgresql://contactmanager_db_ai5e_user:A97PUqSXZlxAuTCmt5WUU9F52u750mJY@dpg-d2m8nb6r433s73crneu0-a/contactmanager_db_ai5e
