--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=contact-manager
 server.port=8080
 
 # Database
-spring.datasource.url=postgresql://contactmanager_db_ai5e_user:A97PUqSXZlxAuTCmt5WUU9F52u750mJY@dpg-d2m8nb6r433s73crneu0-a/contactmanager_db_ai5e
+spring.datasource.url=jdbc:postgresql://dpg-d2m8nb6r433s73crneu0-a:5432/contactmanager_db_ai5e
 spring.datasource.username=contactmanager_db_ai5e_user
 spring.datasource.password=A97PUqSXZlxAuTCmt5WUU9F52u750mJY
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,3 +12,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
