fix database path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=contact-manager
 server.port=8080
 
 # Database
-spring.datasource.url=jdbc:postgresql://dpg-d2m8nb6r433s73crneu0-a:5432/contactmanager_db_ai5e
+spring.datasource.url=jdbc:postgresql://dpg-d2m8nb6r433s73crneu0-a.frankfurt-postgres.render.com/contactmanager_db_ai5e
 spring.datasource.username=contactmanager_db_ai5e_user
 spring.datasource.password=A97PUqSXZlxAuTCmt5WUU9F52u750mJY
 spring.datasource.driver-class-name=org.postgresql.Driver
